err/tenyksclient.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tenyks'...
Compiling './lib/python3.5/site-packages/tenyks/config.py'...
***   File "./lib/python3.5/site-packages/tenyks/config.py", line 143
    print line,
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tenyks/core.py'...
***   File "./lib/python3.5/site-packages/tenyks/core.py", line 160
    if raw_redis_message['data'] != 1L:
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tenyks-0.1.24.egg-info'...
Listing './lib/python3.5/site-packages/tenyksclient'...
Compiling './lib/python3.5/site-packages/tenyksclient/client.py'...
***   File "./lib/python3.5/site-packages/tenyksclient/client.py", line 49
    if raw_redis_message['data'] != 1L:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tenyksclient/config.py'...
***   File "./lib/python3.5/site-packages/tenyksclient/config.py", line 124
    print line,
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tenyksclient-0.1.24.egg-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
